# video-player-FFMPEG

./: .gitattributes  CMakeLists.txt
resources/: I animated Kasane Teto because why not [aFKBNC43gD0].mkv
src/: main.cpp
